option('ncurses', type: 'feature', value: 'auto', description: 'ncurses UI support')
option('execinfo', type: 'feature', value: 'auto', description: 'execinfo/backtrace support')
option('visibility', type: 'feature', value: 'auto', description: 'Symbol visibility attributes')
option('kqueue', type: 'feature', value: 'auto', description: 'kqueue event support')
option('epoll', type: 'feature', value: 'auto', description: 'epoll event support')
option('inotify', type: 'feature', value: 'auto', description: 'inotify support')
option('fallocate', type: 'feature', value: 'auto', description: 'fallocate support')
option('posix-fallocate', type: 'feature', value: 'auto', description: 'posix_fallocate support')
option('pthread-setname-np', type: 'feature', value: 'auto', description: 'pthread_setname_np support')
option('pthread-setstacksize', type: 'feature', value: 'auto', description: 'Explicit pthread stack size (auto-enabled for musl)')
option('instrumentation', type: 'boolean', value: false, description: 'Enable instrumentation')
option('address-space', type: 'integer', value: 0, description: 'Default address space size in MB (0 = auto)')
option('rpc-backend', type: 'combo', choices: ['auto', 'tinyxml2', 'xmlrpc-c', 'none'], value: 'auto', description: 'XML-RPC backend (auto defaults to tinyxml2)')
option('lua', type: 'feature', value: 'auto', description: 'Lua scripting support')
option('systemd', type: 'feature', value: 'disabled', description: 'systemd socket activation support')
option('static-deps', type: 'boolean', value: false, description: 'Statically link all dependencies (except glibc)')
